--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.20)
 project(computor_v1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(computor_v1 main.cpp ParserArgv.cpp ParserArgv.h)
+add_executable(computor_v1 main.cpp ParserArgv.cpp ParserArgv.h tools.cpp tools.h)
