--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 make_minimum_required(VERSION 3.20)
 project(computor_v1)
 
-add_executable(${PROJECT_NAME} main.cpp )
+add_executable(${PROJECT_NAME} main.cpp Computor/Computor.h Computor/Computor_v1.cpp Computor/Computor_v1.h)
