--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -15,7 +15,10 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 enable_testing()
 add_compile_definitions(UNIT_TESTS)
-set(SOURCE_FILES TestComputor_v1WithFixture.cpp ../src/Computor/Computor_v1.h ../src/Computor/Computor_v1.cpp ../src/Computor/Computor.h)
+include_directories(../src)
+set(SOURCE_FILES
+        TestComputor_v1WithFixture.cpp ../src/Computor/Computor_v1.h ../src/Computor/Computor_v1.cpp ../src/Computor/Computor.h
+        TestErrorHandlerWithFixture.cpp ../src/ErrorHandler/ErrorHandler.h ../src/ErrorHandler/ErrorHandler.cpp)
 add_executable( ${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(
         ${PROJECT_NAME}
